добавил небольшой фронт на сайт

--- a/sweater/templates/index.html
+++ b/sweater/templates/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Парсер HH</title>
+    <link rel="stylesheet" href="static/style/index.css">
 </head>
 <body>
-    <p>Парсер HH. Здесь вы можете найти информацию о сосикателях и вакансиях на определенную должность</p>
-    <a href='/job_seeker_search'>Соискатель</a>
-    <a href='/job_search'>Вакансии</a>
+    <p class="text">Парсер HH - Здесь вы можете найти информацию о вакансиях на определенную должность</p>
+    <div class="cont">
+        <a class="link" href='/job_search'>Вакансии</a>
+    </div>
 </body>
 </html>
