--- a/sweater/static/style/job.css
+++ b/sweater/static/style/job.css
@@ -13,7 +13,7 @@ body{
   font-weight: <weight>;
   font-style: normal;
   font-size: 20px;
-  background-color: #FF7400;
+  background-color: red;
   border: none;
   padding: 10px 24px;
   text-align: center;
@@ -31,7 +31,7 @@ body{
   font-weight: <weight>;
   font-style: normal;
   font-size: 20px;
-  background-color: #FF7400;
+  background-color: green;
   border: none;
   padding: 10px 24px;
   text-align: center;
@@ -157,7 +157,7 @@ body{
   font-weight: <weight>;
   font-style: normal;
   font-size: 20px;
-  background-color: #FF7400;
+  background-color: green;
   border: none;
   padding: 10px 24px;
   text-align: center;
@@ -184,4 +184,14 @@ body{
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 15px
+}
+
+.text{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-size: 30px;
+  text-align: center;
+  color: #FF7400;
 }
